@@ -10,6 +10,7 @@ Version 3.xxxx (December xth 2016)
 - Implemented: Netatmo Home Coach support
 - Implemented: Notification for Dummy Soil/Moisture sensor
 - Implemented: Option to replace an Meter device
+- Implemented: Added a new parameter to disable the logging of event script triggers 'Script event triggered: ...'
 
 Version 3.5878 (November 10th 2016)
 - Fixes and various improvements
